parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> instructions
Rule 1     instructions -> instruction
Rule 2     instructions -> instruction instructions
Rule 3     instruction -> block
Rule 4     instruction -> conditional
Rule 5     instruction -> loop
Rule 6     instruction -> statement ;
Rule 7     instruction -> error ;
Rule 8     block -> { instructions }
Rule 9     block -> { error }
Rule 10    conditional -> IF ( expression ) instruction
Rule 11    conditional -> IF ( expression ) instruction ELSE instruction
Rule 12    loop -> while
Rule 13    loop -> for
Rule 14    while -> WHILE ( expression ) instruction
Rule 15    for -> FOR ID = numeric_expression : numeric_expression instruction
Rule 16    statement -> assignment
Rule 17    statement -> flow_keyword
Rule 18    statement -> return
Rule 19    statement -> print
Rule 20    flow_keyword -> BREAK
Rule 21    flow_keyword -> CONTINUE
Rule 22    return -> RETURN expression
Rule 23    return -> RETURN
Rule 24    print -> PRINT print_body
Rule 25    print_body -> expression , print_body
Rule 26    print_body -> expression
Rule 27    string -> STRING
Rule 28    assignment_var -> var
Rule 29    assignment_var -> array_range
Rule 30    assignment -> assignment_var assignment_operand expression
Rule 31    assignment -> assignment_var = string
Rule 32    assignment_operand -> =
Rule 33    assignment_operand -> ADDASSIGN
Rule 34    assignment_operand -> SUBASSIGN
Rule 35    assignment_operand -> MULASSIGN
Rule 36    assignment_operand -> DIVASSIGN
Rule 37    var -> ID
Rule 38    var -> var [ vector_body ]
Rule 39    number -> INTNUM
Rule 40    number -> FLOATNUM
Rule 41    number -> var
Rule 42    array_range -> var [ numeric_expression , numeric_expression ]
Rule 43    expression -> numeric_expression
Rule 44    expression -> comparison_expression
Rule 45    numeric_expression -> number
Rule 46    numeric_expression -> matrix
Rule 47    numeric_expression -> vector
Rule 48    numeric_expression -> string
Rule 49    numeric_expression -> unary_operation
Rule 50    numeric_expression -> function
Rule 51    numeric_expression -> ( numeric_expression )
Rule 52    numeric_expression -> numeric_expression + numeric_expression
Rule 53    numeric_expression -> numeric_expression - numeric_expression
Rule 54    numeric_expression -> numeric_expression * numeric_expression
Rule 55    numeric_expression -> numeric_expression / numeric_expression
Rule 56    numeric_expression -> numeric_expression DOTADD numeric_expression
Rule 57    numeric_expression -> numeric_expression DOTSUB numeric_expression
Rule 58    numeric_expression -> numeric_expression DOTMUL numeric_expression
Rule 59    numeric_expression -> numeric_expression DOTDIV numeric_expression
Rule 60    vector -> [ vector_body ]
Rule 61    vector -> [ ]
Rule 62    vector_body -> numeric_expression
Rule 63    vector_body -> vector_body , numeric_expression
Rule 64    matrix -> [ matrix_body ]
Rule 65    matrix_body -> vector_body
Rule 66    matrix_body -> matrix_body ; vector_body
Rule 67    unary_operation -> negation
Rule 68    unary_operation -> transposition
Rule 69    negation -> - numeric_expression
Rule 70    transposition -> numeric_expression '
Rule 71    function -> function_name ( vector_body )
Rule 72    function -> function_name ( error )
Rule 73    function_name -> EYE
Rule 74    function_name -> ZEROS
Rule 75    function_name -> ONES
Rule 76    comparison_expression -> numeric_expression < numeric_expression
Rule 77    comparison_expression -> numeric_expression > numeric_expression
Rule 78    comparison_expression -> numeric_expression EQUAL numeric_expression
Rule 79    comparison_expression -> numeric_expression NOTEQUAL numeric_expression
Rule 80    comparison_expression -> numeric_expression LE numeric_expression
Rule 81    comparison_expression -> numeric_expression GE numeric_expression
Rule 82    comparison_expression -> ( comparison_expression )

Terminals, with rules where they appear

'                    : 70
(                    : 10 11 14 51 71 72 82
)                    : 10 11 14 51 71 72 82
*                    : 54
+                    : 52
,                    : 25 42 63
-                    : 53 69
/                    : 55
:                    : 15
;                    : 6 7 66
<                    : 76
=                    : 15 31 32
>                    : 77
ADDASSIGN            : 33
BREAK                : 20
CONTINUE             : 21
DIVASSIGN            : 36
DOTADD               : 56
DOTDIV               : 59
DOTMUL               : 58
DOTSUB               : 57
ELSE                 : 11
EQUAL                : 78
EYE                  : 73
FLOATNUM             : 40
FOR                  : 15
GE                   : 81
ID                   : 15 37
IF                   : 10 11
INTNUM               : 39
LE                   : 80
MULASSIGN            : 35
NOTEQUAL             : 79
ONES                 : 75
PRINT                : 24
RETURN               : 22 23
STRING               : 27
SUBASSIGN            : 34
WHILE                : 14
ZEROS                : 74
[                    : 38 42 60 61 64
]                    : 38 42 60 61 64
error                : 7 9 72
{                    : 8 9
}                    : 8 9

Nonterminals, with rules where they appear

array_range          : 29
assignment           : 16
assignment_operand   : 30
assignment_var       : 30 31
block                : 3
comparison_expression : 44 82
conditional          : 4
expression           : 10 11 14 22 25 26 30
flow_keyword         : 17
for                  : 13
function             : 50
function_name        : 71 72
instruction          : 1 2 10 11 11 14 15
instructions         : 2 8 0
loop                 : 5
matrix               : 46
matrix_body          : 64 66
negation             : 67
number               : 45
numeric_expression   : 15 15 42 42 43 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 62 63 69 70 76 76 77 77 78 78 79 79 80 80 81 81
print                : 19
print_body           : 24 25
return               : 18
statement            : 6
string               : 31 48
transposition        : 68
unary_operation      : 49
var                  : 28 38 41 42
vector               : 47
vector_body          : 38 60 63 65 66 71
while                : 12

Parsing method: LALR

state 0

    (0) S' -> . instructions
    (1) instructions -> . instruction
    (2) instructions -> . instruction instructions
    (3) instruction -> . block
    (4) instruction -> . conditional
    (5) instruction -> . loop
    (6) instruction -> . statement ;
    (7) instruction -> . error ;
    (8) block -> . { instructions }
    (9) block -> . { error }
    (10) conditional -> . IF ( expression ) instruction
    (11) conditional -> . IF ( expression ) instruction ELSE instruction
    (12) loop -> . while
    (13) loop -> . for
    (16) statement -> . assignment
    (17) statement -> . flow_keyword
    (18) statement -> . return
    (19) statement -> . print
    (14) while -> . WHILE ( expression ) instruction
    (15) for -> . FOR ID = numeric_expression : numeric_expression instruction
    (30) assignment -> . assignment_var assignment_operand expression
    (31) assignment -> . assignment_var = string
    (20) flow_keyword -> . BREAK
    (21) flow_keyword -> . CONTINUE
    (22) return -> . RETURN expression
    (23) return -> . RETURN
    (24) print -> . PRINT print_body
    (28) assignment_var -> . var
    (29) assignment_var -> . array_range
    (37) var -> . ID
    (38) var -> . var [ vector_body ]
    (42) array_range -> . var [ numeric_expression , numeric_expression ]

    error           shift and go to state 7
    {               shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21
    RETURN          shift and go to state 22
    PRINT           shift and go to state 23
    ID              shift and go to state 18

    instructions                   shift and go to state 1
    instruction                    shift and go to state 2
    block                          shift and go to state 3
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    statement                      shift and go to state 6
    while                          shift and go to state 10
    for                            shift and go to state 11
    assignment                     shift and go to state 12
    flow_keyword                   shift and go to state 13
    return                         shift and go to state 14
    print                          shift and go to state 15
    assignment_var                 shift and go to state 19
    var                            shift and go to state 24
    array_range                    shift and go to state 25

state 1

    (0) S' -> instructions .



state 2

    (1) instructions -> instruction .
    (2) instructions -> instruction . instructions
    (1) instructions -> . instruction
    (2) instructions -> . instruction instructions
    (3) instruction -> . block
    (4) instruction -> . conditional
    (5) instruction -> . loop
    (6) instruction -> . statement ;
    (7) instruction -> . error ;
    (8) block -> . { instructions }
    (9) block -> . { error }
    (10) conditional -> . IF ( expression ) instruction
    (11) conditional -> . IF ( expression ) instruction ELSE instruction
    (12) loop -> . while
    (13) loop -> . for
    (16) statement -> . assignment
    (17) statement -> . flow_keyword
    (18) statement -> . return
    (19) statement -> . print
    (14) while -> . WHILE ( expression ) instruction
    (15) for -> . FOR ID = numeric_expression : numeric_expression instruction
    (30) assignment -> . assignment_var assignment_operand expression
    (31) assignment -> . assignment_var = string
    (20) flow_keyword -> . BREAK
    (21) flow_keyword -> . CONTINUE
    (22) return -> . RETURN expression
    (23) return -> . RETURN
    (24) print -> . PRINT print_body
    (28) assignment_var -> . var
    (29) assignment_var -> . array_range
    (37) var -> . ID
    (38) var -> . var [ vector_body ]
    (42) array_range -> . var [ numeric_expression , numeric_expression ]

    $end            reduce using rule 1 (instructions -> instruction .)
    }               reduce using rule 1 (instructions -> instruction .)
    error           shift and go to state 7
    {               shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21
    RETURN          shift and go to state 22
    PRINT           shift and go to state 23
    ID              shift and go to state 18

    instruction                    shift and go to state 2
    instructions                   shift and go to state 26
    block                          shift and go to state 3
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    statement                      shift and go to state 6
    while                          shift and go to state 10
    for                            shift and go to state 11
    assignment                     shift and go to state 12
    flow_keyword                   shift and go to state 13
    return                         shift and go to state 14
    print                          shift and go to state 15
    assignment_var                 shift and go to state 19
    var                            shift and go to state 24
    array_range                    shift and go to state 25

state 3

    (3) instruction -> block .

    error           reduce using rule 3 (instruction -> block .)
    {               reduce using rule 3 (instruction -> block .)
    IF              reduce using rule 3 (instruction -> block .)
    WHILE           reduce using rule 3 (instruction -> block .)
    FOR             reduce using rule 3 (instruction -> block .)
    BREAK           reduce using rule 3 (instruction -> block .)
    CONTINUE        reduce using rule 3 (instruction -> block .)
    RETURN          reduce using rule 3 (instruction -> block .)
    PRINT           reduce using rule 3 (instruction -> block .)
    ID              reduce using rule 3 (instruction -> block .)
    $end            reduce using rule 3 (instruction -> block .)
    }               reduce using rule 3 (instruction -> block .)
    ELSE            reduce using rule 3 (instruction -> block .)


state 4

    (4) instruction -> conditional .

    error           reduce using rule 4 (instruction -> conditional .)
    {               reduce using rule 4 (instruction -> conditional .)
    IF              reduce using rule 4 (instruction -> conditional .)
    WHILE           reduce using rule 4 (instruction -> conditional .)
    FOR             reduce using rule 4 (instruction -> conditional .)
    BREAK           reduce using rule 4 (instruction -> conditional .)
    CONTINUE        reduce using rule 4 (instruction -> conditional .)
    RETURN          reduce using rule 4 (instruction -> conditional .)
    PRINT           reduce using rule 4 (instruction -> conditional .)
    ID              reduce using rule 4 (instruction -> conditional .)
    $end            reduce using rule 4 (instruction -> conditional .)
    }               reduce using rule 4 (instruction -> conditional .)
    ELSE            reduce using rule 4 (instruction -> conditional .)


state 5

    (5) instruction -> loop .

    error           reduce using rule 5 (instruction -> loop .)
    {               reduce using rule 5 (instruction -> loop .)
    IF              reduce using rule 5 (instruction -> loop .)
    WHILE           reduce using rule 5 (instruction -> loop .)
    FOR             reduce using rule 5 (instruction -> loop .)
    BREAK           reduce using rule 5 (instruction -> loop .)
    CONTINUE        reduce using rule 5 (instruction -> loop .)
    RETURN          reduce using rule 5 (instruction -> loop .)
    PRINT           reduce using rule 5 (instruction -> loop .)
    ID              reduce using rule 5 (instruction -> loop .)
    $end            reduce using rule 5 (instruction -> loop .)
    }               reduce using rule 5 (instruction -> loop .)
    ELSE            reduce using rule 5 (instruction -> loop .)


state 6

    (6) instruction -> statement . ;

    ;               shift and go to state 27


state 7

    (7) instruction -> error . ;

    ;               shift and go to state 28


state 8

    (8) block -> { . instructions }
    (9) block -> { . error }
    (1) instructions -> . instruction
    (2) instructions -> . instruction instructions
    (3) instruction -> . block
    (4) instruction -> . conditional
    (5) instruction -> . loop
    (6) instruction -> . statement ;
    (7) instruction -> . error ;
    (8) block -> . { instructions }
    (9) block -> . { error }
    (10) conditional -> . IF ( expression ) instruction
    (11) conditional -> . IF ( expression ) instruction ELSE instruction
    (12) loop -> . while
    (13) loop -> . for
    (16) statement -> . assignment
    (17) statement -> . flow_keyword
    (18) statement -> . return
    (19) statement -> . print
    (14) while -> . WHILE ( expression ) instruction
    (15) for -> . FOR ID = numeric_expression : numeric_expression instruction
    (30) assignment -> . assignment_var assignment_operand expression
    (31) assignment -> . assignment_var = string
    (20) flow_keyword -> . BREAK
    (21) flow_keyword -> . CONTINUE
    (22) return -> . RETURN expression
    (23) return -> . RETURN
    (24) print -> . PRINT print_body
    (28) assignment_var -> . var
    (29) assignment_var -> . array_range
    (37) var -> . ID
    (38) var -> . var [ vector_body ]
    (42) array_range -> . var [ numeric_expression , numeric_expression ]

    error           shift and go to state 30
    {               shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21
    RETURN          shift and go to state 22
    PRINT           shift and go to state 23
    ID              shift and go to state 18

    instructions                   shift and go to state 29
    instruction                    shift and go to state 2
    block                          shift and go to state 3
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    statement                      shift and go to state 6
    while                          shift and go to state 10
    for                            shift and go to state 11
    assignment                     shift and go to state 12
    flow_keyword                   shift and go to state 13
    return                         shift and go to state 14
    print                          shift and go to state 15
    assignment_var                 shift and go to state 19
    var                            shift and go to state 24
    array_range                    shift and go to state 25

state 9

    (10) conditional -> IF . ( expression ) instruction
    (11) conditional -> IF . ( expression ) instruction ELSE instruction

    (               shift and go to state 31


state 10

    (12) loop -> while .

    error           reduce using rule 12 (loop -> while .)
    {               reduce using rule 12 (loop -> while .)
    IF              reduce using rule 12 (loop -> while .)
    WHILE           reduce using rule 12 (loop -> while .)
    FOR             reduce using rule 12 (loop -> while .)
    BREAK           reduce using rule 12 (loop -> while .)
    CONTINUE        reduce using rule 12 (loop -> while .)
    RETURN          reduce using rule 12 (loop -> while .)
    PRINT           reduce using rule 12 (loop -> while .)
    ID              reduce using rule 12 (loop -> while .)
    $end            reduce using rule 12 (loop -> while .)
    }               reduce using rule 12 (loop -> while .)
    ELSE            reduce using rule 12 (loop -> while .)


state 11

    (13) loop -> for .

    error           reduce using rule 13 (loop -> for .)
    {               reduce using rule 13 (loop -> for .)
    IF              reduce using rule 13 (loop -> for .)
    WHILE           reduce using rule 13 (loop -> for .)
    FOR             reduce using rule 13 (loop -> for .)
    BREAK           reduce using rule 13 (loop -> for .)
    CONTINUE        reduce using rule 13 (loop -> for .)
    RETURN          reduce using rule 13 (loop -> for .)
    PRINT           reduce using rule 13 (loop -> for .)
    ID              reduce using rule 13 (loop -> for .)
    $end            reduce using rule 13 (loop -> for .)
    }               reduce using rule 13 (loop -> for .)
    ELSE            reduce using rule 13 (loop -> for .)


state 12

    (16) statement -> assignment .

    ;               reduce using rule 16 (statement -> assignment .)


state 13

    (17) statement -> flow_keyword .

    ;               reduce using rule 17 (statement -> flow_keyword .)


state 14

    (18) statement -> return .

    ;               reduce using rule 18 (statement -> return .)


state 15

    (19) statement -> print .

    ;               reduce using rule 19 (statement -> print .)


state 16

    (14) while -> WHILE . ( expression ) instruction

    (               shift and go to state 32


state 17

    (15) for -> FOR . ID = numeric_expression : numeric_expression instruction

    ID              shift and go to state 33


state 18

    (37) var -> ID .

    [               reduce using rule 37 (var -> ID .)
    =               reduce using rule 37 (var -> ID .)
    ADDASSIGN       reduce using rule 37 (var -> ID .)
    SUBASSIGN       reduce using rule 37 (var -> ID .)
    MULASSIGN       reduce using rule 37 (var -> ID .)
    DIVASSIGN       reduce using rule 37 (var -> ID .)
    +               reduce using rule 37 (var -> ID .)
    -               reduce using rule 37 (var -> ID .)
    *               reduce using rule 37 (var -> ID .)
    /               reduce using rule 37 (var -> ID .)
    DOTADD          reduce using rule 37 (var -> ID .)
    DOTSUB          reduce using rule 37 (var -> ID .)
    DOTMUL          reduce using rule 37 (var -> ID .)
    DOTDIV          reduce using rule 37 (var -> ID .)
    <               reduce using rule 37 (var -> ID .)
    >               reduce using rule 37 (var -> ID .)
    EQUAL           reduce using rule 37 (var -> ID .)
    NOTEQUAL        reduce using rule 37 (var -> ID .)
    LE              reduce using rule 37 (var -> ID .)
    GE              reduce using rule 37 (var -> ID .)
    '               reduce using rule 37 (var -> ID .)
    ;               reduce using rule 37 (var -> ID .)
    ,               reduce using rule 37 (var -> ID .)
    )               reduce using rule 37 (var -> ID .)
    ]               reduce using rule 37 (var -> ID .)
    :               reduce using rule 37 (var -> ID .)
    error           reduce using rule 37 (var -> ID .)
    {               reduce using rule 37 (var -> ID .)
    IF              reduce using rule 37 (var -> ID .)
    WHILE           reduce using rule 37 (var -> ID .)
    FOR             reduce using rule 37 (var -> ID .)
    BREAK           reduce using rule 37 (var -> ID .)
    CONTINUE        reduce using rule 37 (var -> ID .)
    RETURN          reduce using rule 37 (var -> ID .)
    PRINT           reduce using rule 37 (var -> ID .)
    ID              reduce using rule 37 (var -> ID .)


state 19

    (30) assignment -> assignment_var . assignment_operand expression
    (31) assignment -> assignment_var . = string
    (32) assignment_operand -> . =
    (33) assignment_operand -> . ADDASSIGN
    (34) assignment_operand -> . SUBASSIGN
    (35) assignment_operand -> . MULASSIGN
    (36) assignment_operand -> . DIVASSIGN

    =               shift and go to state 35
    ADDASSIGN       shift and go to state 36
    SUBASSIGN       shift and go to state 37
    MULASSIGN       shift and go to state 38
    DIVASSIGN       shift and go to state 39

    assignment_operand             shift and go to state 34

state 20

    (20) flow_keyword -> BREAK .

    ;               reduce using rule 20 (flow_keyword -> BREAK .)


state 21

    (21) flow_keyword -> CONTINUE .

    ;               reduce using rule 21 (flow_keyword -> CONTINUE .)


state 22

    (22) return -> RETURN . expression
    (23) return -> RETURN .
    (43) expression -> . numeric_expression
    (44) expression -> . comparison_expression
    (45) numeric_expression -> . number
    (46) numeric_expression -> . matrix
    (47) numeric_expression -> . vector
    (48) numeric_expression -> . string
    (49) numeric_expression -> . unary_operation
    (50) numeric_expression -> . function
    (51) numeric_expression -> . ( numeric_expression )
    (52) numeric_expression -> . numeric_expression + numeric_expression
    (53) numeric_expression -> . numeric_expression - numeric_expression
    (54) numeric_expression -> . numeric_expression * numeric_expression
    (55) numeric_expression -> . numeric_expression / numeric_expression
    (56) numeric_expression -> . numeric_expression DOTADD numeric_expression
    (57) numeric_expression -> . numeric_expression DOTSUB numeric_expression
    (58) numeric_expression -> . numeric_expression DOTMUL numeric_expression
    (59) numeric_expression -> . numeric_expression DOTDIV numeric_expression
    (76) comparison_expression -> . numeric_expression < numeric_expression
    (77) comparison_expression -> . numeric_expression > numeric_expression
    (78) comparison_expression -> . numeric_expression EQUAL numeric_expression
    (79) comparison_expression -> . numeric_expression NOTEQUAL numeric_expression
    (80) comparison_expression -> . numeric_expression LE numeric_expression
    (81) comparison_expression -> . numeric_expression GE numeric_expression
    (82) comparison_expression -> . ( comparison_expression )
    (39) number -> . INTNUM
    (40) number -> . FLOATNUM
    (41) number -> . var
    (64) matrix -> . [ matrix_body ]
    (60) vector -> . [ vector_body ]
    (61) vector -> . [ ]
    (27) string -> . STRING
    (67) unary_operation -> . negation
    (68) unary_operation -> . transposition
    (71) function -> . function_name ( vector_body )
    (72) function -> . function_name ( error )
    (37) var -> . ID
    (38) var -> . var [ vector_body ]
    (69) negation -> . - numeric_expression
    (70) transposition -> . numeric_expression '
    (73) function_name -> . EYE
    (74) function_name -> . ZEROS
    (75) function_name -> . ONES

    ;               reduce using rule 23 (return -> RETURN .)
    (               shift and go to state 49
    INTNUM          shift and go to state 51
    FLOATNUM        shift and go to state 52
    [               shift and go to state 54
    STRING          shift and go to state 55
    ID              shift and go to state 18
    -               shift and go to state 50
    EYE             shift and go to state 59
    ZEROS           shift and go to state 60
    ONES            shift and go to state 61

    expression                     shift and go to state 40
    numeric_expression             shift and go to state 41
    comparison_expression          shift and go to state 42
    number                         shift and go to state 43
    matrix                         shift and go to state 44
    vector                         shift and go to state 45
    string                         shift and go to state 46
    unary_operation                shift and go to state 47
    function                       shift and go to state 48
    var                            shift and go to state 53
    negation                       shift and go to state 56
    transposition                  shift and go to state 57
    function_name                  shift and go to state 58

state 23

    (24) print -> PRINT . print_body
    (25) print_body -> . expression , print_body
    (26) print_body -> . expression
    (43) expression -> . numeric_expression
    (44) expression -> . comparison_expression
    (45) numeric_expression -> . number
    (46) numeric_expression -> . matrix
    (47) numeric_expression -> . vector
    (48) numeric_expression -> . string
    (49) numeric_expression -> . unary_operation
    (50) numeric_expression -> . function
    (51) numeric_expression -> . ( numeric_expression )
    (52) numeric_expression -> . numeric_expression + numeric_expression
    (53) numeric_expression -> . numeric_expression - numeric_expression
    (54) numeric_expression -> . numeric_expression * numeric_expression
    (55) numeric_expression -> . numeric_expression / numeric_expression
    (56) numeric_expression -> . numeric_expression DOTADD numeric_expression
    (57) numeric_expression -> . numeric_expression DOTSUB numeric_expression
    (58) numeric_expression -> . numeric_expression DOTMUL numeric_expression
    (59) numeric_expression -> . numeric_expression DOTDIV numeric_expression
    (76) comparison_expression -> . numeric_expression < numeric_expression
    (77) comparison_expression -> . numeric_expression > numeric_expression
    (78) comparison_expression -> . numeric_expression EQUAL numeric_expression
    (79) comparison_expression -> . numeric_expression NOTEQUAL numeric_expression
    (80) comparison_expression -> . numeric_expression LE numeric_expression
    (81) comparison_expression -> . numeric_expression GE numeric_expression
    (82) comparison_expression -> . ( comparison_expression )
    (39) number -> . INTNUM
    (40) number -> . FLOATNUM
    (41) number -> . var
    (64) matrix -> . [ matrix_body ]
    (60) vector -> . [ vector_body ]
    (61) vector -> . [ ]
    (27) string -> . STRING
    (67) unary_operation -> . negation
    (68) unary_operation -> . transposition
    (71) function -> . function_name ( vector_body )
    (72) function -> . function_name ( error )
    (37) var -> . ID
    (38) var -> . var [ vector_body ]
    (69) negation -> . - numeric_expression
    (70) transposition -> . numeric_expression '
    (73) function_name -> . EYE
    (74) function_name -> . ZEROS
    (75) function_name -> . ONES

    (               shift and go to state 49
    INTNUM          shift and go to state 51
    FLOATNUM        shift and go to state 52
    [               shift and go to state 54
    STRING          shift and go to state 55
    ID              shift and go to state 18
    -               shift and go to state 50
    EYE             shift and go to state 59
    ZEROS           shift and go to state 60
    ONES            shift and go to state 61

    print_body                     shift and go to state 62
    expression                     shift and go to state 63
    numeric_expression             shift and go to state 41
    comparison_expression          shift and go to state 42
    number                         shift and go to state 43
    matrix                         shift and go to state 44
    vector                         shift and go to state 45
    string                         shift and go to state 46
    unary_operation                shift and go to state 47
    function                       shift and go to state 48
    var                            shift and go to state 53
    negation                       shift and go to state 56
    transposition                  shift and go to state 57
    function_name                  shift and go to state 58

state 24

    (28) assignment_var -> var .
    (38) var -> var . [ vector_body ]
    (42) array_range -> var . [ numeric_expression , numeric_expression ]

    =               reduce using rule 28 (assignment_var -> var .)
    ADDASSIGN       reduce using rule 28 (assignment_var -> var .)
    SUBASSIGN       reduce using rule 28 (assignment_var -> var .)
    MULASSIGN       reduce using rule 28 (assignment_var -> var .)
    DIVASSIGN       reduce using rule 28 (assignment_var -> var .)
    [               shift and go to state 64


state 25

    (29) assignment_var -> array_range .

    =               reduce using rule 29 (assignment_var -> array_range .)
    ADDASSIGN       reduce using rule 29 (assignment_var -> array_range .)
    SUBASSIGN       reduce using rule 29 (assignment_var -> array_range .)
    MULASSIGN       reduce using rule 29 (assignment_var -> array_range .)
    DIVASSIGN       reduce using rule 29 (assignment_var -> array_range .)


state 26

    (2) instructions -> instruction instructions .
